# nixie_clock

./: nixie_clock.kicad_pcb
cad/: full_clock.scad  nixie_arm.scad
cad/parts_links/: parts_info
code/: Cargo.toml  todo.txt
code/.cargo/: config.toml
code/src/: main.rs
code/src/tasks/: display.rs  handler.rs  menu.rs  mod.rs  ntp.rs
code/src/utils/: mod.rs  mutex_channels.rs  resources.rs
pcb/nixie_clock/: #auto_saved_files#  Nixie_Block.kicad_pcb  Nixie_Block.kicad_prl  Nixie_Block.kicad_pro  Nixie_Block.kicad_sch  Nixie_Boost.kicad_sch  Nixie_Control.kicad_pcb  Nixie_Control.kicad_pcb.hierpcb.json  Nixie_Control.kicad_prl  Nixie_Control.kicad_pro  Nixie_Control.kicad_sch  Pico_Conn.kicad_sch  fp-info-cache  fp-lib-table  nixie_clock.kicad_pcb  nixie_clock.kicad_pcb.hierpcb.json  nixie_clock.kicad_prl  nixie_clock.kicad_pro  nixie_clock.kicad_sch  nixie_objects.kicad_sym  sym-lib-table  ~nixie_clock.kicad_sch.lck
pcb/nixie_clock/pcasim/: pca9685_2_5v.ibs  pca9685_3_3v.ibs  pca9685_5v.ibs
pcb/nixie_clock/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
pcb/nixie_clock/production/nixie_clock/: nixie_clock-B_Adhesive.gba  nixie_clock-B_Courtyard.gbr  nixie_clock-B_Cu.gbl  nixie_clock-B_Fab.gbr  nixie_clock-B_Mask.gbs  nixie_clock-B_Paste.gbp  nixie_clock-B_Silkscreen.gbo  nixie_clock-Edge_Cuts.gm1  nixie_clock-F_Adhesive.gta  nixie_clock-F_Courtyard.gbr  nixie_clock-F_Cu.gtl  nixie_clock-F_Fab.gbr  nixie_clock-F_Mask.gts  nixie_clock-F_Paste.gtp  nixie_clock-F_Silkscreen.gto  nixie_clock-In1_Cu.g2  nixie_clock-In2_Cu.g3  nixie_clock-In3_Cu.g4  nixie_clock-In4_Cu.g5  nixie_clock-NPTH-drl_map.gbr  nixie_clock-NPTH.drl  nixie_clock-PTH-drl_map.gbr  nixie_clock-PTH.drl  nixie_clock-User_4.gbr  nixie_clock-User_Comments.gbr  nixie_clock-User_Drawings.gbr  nixie_clock-User_Eco1.gbr  nixie_clock-User_Eco2.gbr
test_code/.cargo/: config.toml
test_code/src/: main.rs
